--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,24 +1,53 @@
 body {
-    padding: 0;
-    text-align: center;
+  margin: 0;
+  padding: 0;
+  background-color: rgb(0, 180, 120);
+  background: url("/images/crowd.jpeg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  }
+
+  h1 {
+    font-size: 6rem;
+    color: rgb(255, 255, 255);
+    background-color: rgb(235, 161, 0);
+    padding: 15px;
+    border-radius: 10px;
+    border: 15px solid rgb(34, 96, 218);
   }
   
   .game-intro {
-    float: left;
-    padding: 0% 10%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
   }
-  
-  .game-intro p {
-    font-size: 18px;
-    font-family: "Verdana"
+
+  h4 {
+    text-align: center;
+    font-size: 1rem;
+    font-family: "Verdana";
   }
-  
+
   #logo-img {
-    width: 350px;
+    width: 40vw;
   }
   
-  .arrows-img {
-    width: 150px;
+  #game-logo {
+    width: 30vw;
+  }
+  
+  #arrows-img-div {
+    width: 60vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+  
+  #arrows-img {
+    width: 8rem;
   }
   
   body button {
@@ -30,18 +59,29 @@ body {
     box-shadow: 0;
     border-radius: 5px;
     margin-bottom: 20px;
+    border: 4px solid rgba(255, 255, 255, 0);
+    transition: ease-in 0.2s;
+  }
+  body button:hover {
+    border: 4px solid white;
+    background-color: #c9111a;
+    color: rgb(255, 255, 255);
   }
   
   #game-board {
-      float: left;
-      padding: 0px 0px;
-  }
-
-  .img-board {
-    background-position: 0 0;
-    background-size: cover;
-    background-repeat: no-repeat;
-    height: 650px;
-    position: relative;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-start;
   }
   
+  #left-game-div {
+    padding-top: 30px;
+    height: 100vh;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-direction: column;
+  }
