--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -8,12 +8,12 @@ body {
   }
 
   h1 {
-    font-size: 6rem;
+    font-size: 3rem;
     color: rgb(255, 255, 255);
-    background-color: rgb(235, 161, 0);
+    background-color: rgb(9, 167, 175);
     padding: 15px;
-    border-radius: 10px;
-    border: 15px solid rgb(34, 96, 218);
+    border-radius: 4px;
+    border: 2px solid rgb(25, 25, 26);
   }
   
   .game-intro {
@@ -22,6 +22,7 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    margin-top: 2rem
   }
 
   h4 {
@@ -31,11 +32,13 @@ body {
   }
 
   #logo-img {
-    width: 40vw;
+    width: 20vw;
+    border: 2px solid rgb(25, 25, 26);
   }
   
   #game-logo {
-    width: 30vw;
+    width: 20vw;
+    border: 2px solid rgb(25, 25, 26);
   }
   
   #arrows-img-div {
@@ -45,16 +48,16 @@ body {
     align-items: center;
     flex-direction: column;
   }
-  
+
   #arrows-img {
     width: 8rem;
   }
   
   body button {
     font-size: 30px;
-    background-color: #870007;
+    background-color: #65ccd1;
     color: #fff;
-    padding: 20px 40px;
+    padding: 10px 20px;
     border: 0;
     box-shadow: 0;
     border-radius: 5px;
