--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,6 +1,7 @@
 body {
   margin: 0;
   padding: 0;
+  border: 2px solid black
   background-color: rgb(0, 180, 120);
   background: url("/images/crowd.jpeg");
   background-size: cover;
