--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -3,7 +3,7 @@ body {
   padding: 0;
   border: 2px solid black;
   background-color: rgb(0, 180, 120);
-  background: url("/images/crowd.jpeg");
+  background: url("../images/crowd.jpeg");
   background-size: cover;
   background-repeat: no-repeat;
   }
