--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -31,6 +31,12 @@ body {
     font-family: "Verdana";
   }
 
+  h3 {
+    text-align: center;
+    font-size: 0.8rem;
+    font-family: "Verdana";
+  }
+
   #logo-img {
     width: 20vw;
     border: 2px solid rgb(25, 25, 26);
@@ -42,7 +48,7 @@ body {
   }
   
   #arrows-img-div {
-    width: 60vw;
+    width: 30vw;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -81,14 +87,12 @@ body {
   }
   
   #left-game-div {
-    padding-top: 30px;
-    height: 100vh;
+    padding-top: 6rem;
+    width: 0;
+    margin: 1rem;
+    /* height: 100vh; */
     display: flex;
     justify-content: flex-start;
     align-items: center;
     flex-direction: column;
   }
-
-  /* #my-canvas {
-    width: 90%
-  } */
