--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,15 +1,17 @@
 body {
   margin: 0;
   padding: 0;
-  background-color: rgb(140, 238, 249);
+  background-color: rgb(10, 14, 15);
+  font-family: 'Press Start 2P', cursive;
   background-size: cover;
   background-repeat: no-repeat;
   }
 
   h1 {
-    font-size: 2rem;
     color: rgb(255, 255, 255);
     background-color: rgb(9, 167, 175);
+    font-family: 'Press Start 2P', cursive;
+    font-size: 1rem;
     padding: 15px;
     border-radius: 4px;
     border: 2px solid rgb(25, 25, 26);
@@ -28,15 +30,15 @@ body {
   h4 {
     text-align: center;
     width: 36%;
-    font-size: 1.5rem;
-    font-family: "Verdana";
+    font-family: 'Press Start 2P', cursive;
+    font-size: .75rem;
     color: rgb(246, 251, 252);
   }
 
   h3 {
     text-align: center;
     font-size: 0.8rem;
-    font-family: "Verdana";
+    font-family: 'Press Start 2P', cursive;
   }
 
   #logo-img {
@@ -62,8 +64,9 @@ body {
   }
   
   body button {
-    font-size: 30px;
     background-color: #65ccd1;
+    font-family: 'Press Start 2P', cursive;
+    font-size: 15px;
     color: #fff;
     padding: 10px 20px;
     border: 0;
